--- a/package.json
+++ b/package.json
@@ -73,8 +73,13 @@
         "yargs": "~15.4.1"
     },
     "dependencies": {
+        "@yaireo/fakescroll": "^2.5.1",
+        "lozad": "^1.16.0",
+        "micromodal": "^0.4.6",
         "smart-grid": "^2.1.2",
-        "tiny-slider": "^2.9.3"
+        "smooth-scroll": "^16.1.3",
+        "tiny-slider": "^2.9.3",
+        "vanilla-text-mask": "^5.1.1"
     },
     "husky": {
         "hooks": {
