--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "fslightbox": "^3.2.3",
         "lozad": "^1.16.0",
         "micromodal": "^0.4.6",
+        "scroll-lock": "^2.1.5",
         "smart-grid": "^2.1.2",
         "smooth-scroll": "^16.1.3",
         "tiny-slider": "^2.9.3",
